--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "dm_me",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
+    "subscriptions-transport-ws": "^0.9.18",
     "underscore": "^1.13.1",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.7",
